@@ -1,3 +1,7 @@
+2003-05-02  Paolo Carlini  <pcarlini@unitus.it>
+
+	* include/std/std_sstream.h (str()): Tidy.
+
 2003-05-02  Nathan Myers  <ncm@cantrip.org>
 	    Paolo Carlini  <pcarlini@unitus.it>
 
